Fix gap from px to vw

--- a/html/style.css
+++ b/html/style.css
@@ -69,7 +69,7 @@
     padding-bottom: 15px;
     display: flex;
     justify-content: center;
-    gap: 35px;
+    gap: 1.82vw;
 }
 
 .modal-footer button {
